--- a/node-dat-graph/index.html
+++ b/node-dat-graph/index.html
@@ -138,7 +138,7 @@ window.onload = function() {
   </script>
 </head>
 <body>
-  <div>what the hell is <em>dat</em>?<br><br>karissa mckelvey</div>
+  <div>what the fork is <em>dat</em>?<br><br>karissa mckelvey</div>
   <div>
     <em>dat-data.com</em> usopendata.org<br><br><img src="sloan.jpg"/>
   </div>
