udpate node-dat

--- a/node-dat-graph/index.html
+++ b/node-dat-graph/index.html
@@ -203,7 +203,7 @@ window.onload = function() {
       <source src="error.mov">
     </video>
     <notes>
-    they don't want to fiddle with configuration. they don't want to endlessly search how to install that C library. or how to resolve conflicts between dependencies. or how to install
+    don't want to fiddle with configuration. they don't want to endlessly search how to install that C library. or how to resolve conflicts between dependencies. or how to install
     </notes>
   </div>
   <div>
