import notes into big

--- a/knight-publicbits/index.html
+++ b/knight-publicbits/index.html
@@ -139,10 +139,91 @@ window.onload = function() {
 </head>
 <body>
   <div>
-
-<div>
-    <img src="people.png" />
-    http://publicbits.org
-</div>
+    <em>publicbits.org</em><br><br>
+    <small>max ogden<br>mathias buus<br>karissa mckelvey </small>
+  </div>
+  <div>
+    <notes>look at sue</notes>
+  </div>
+  <div>
+    <notes>
+      sue is a data analyst. she finds data from the internet and makes sense out of it.
+    </notes>
+  </div>
+  <div>
+    <notes>.ok, sue wants to do a study on water quality around the world.</notes>
+  </div>
+  <div>
+    <notes>first, she needs to get data about the quality of water. catalogue it. and analyze it.</notes>
+  </div>
+  <div>
+    <notes>
+      does searches.
+      ckan portals -> “water quality” -> copy link -> download
+      socrata portals -> craft SODA query -> wait -> download
+      custom portals -> “click click click” -> copy link -> download
+    </notes>
+  </div>
+  <div>
+    <notes>
+      once the data is all downloaded, we can make awesome charts, graphs, analysis, policy papers, news articles, everything!
+    </notes>
+  </div>
+  <div>
+    <notes>
+      … but what happens if the data changes? sue will have to repeat the process in order to find out..if she doesn't, bad things could happen (science, journalism)
+    </notes>
+  </div>
+  <div>
+    <notes>
+      …. what if the data becomes unavailable? no one else can replicate it. (internet archive)
+    </notes>
+  </div>
+  <div>
+    <notes>
+      …. what if the data becomes unavailable? no one else can replicate it. (internet archive)
+    </notes>
+  </div>
+  <div>
+    <notes>
+      …. how about if the data is really large? it might take forever to download if the server is slow (wikipedia)
+    </notes>
+  </div>
+  <div>
+    <notes>
+      Unfortunate side-effect of open data: silos, difficult to access. open doesn't mean easy
+    </notes>
+  </div>
+  <div>
+    <notes>
+      we have been working on better data sharing tools for the last few years
+    </notes>
+  </div>
+  <div>
+    <notes>
+      we realized the missing piece is an easy way to share and discover datasets
+    </notes>
+  </div>
+  <div>
+    <notes>
+      we're calling it Public Bits, publicbits.org
+    </notes>
+  </div>
+  <div>
+    <notes>
+      it will scrape data sources and make them discoverable and easy to download
+    </notes>
+  </div>
+  <div>
+    <notes>
+      we see it as a new data distribution system for open data, not just another app ("from centralized portals to decentralized network" diagram)
+    </notes>
+  </div>
+  <div>
+      <img src="people.png" />
+      <em>dat-data.com</em><br>
+      @dat_project<br>
+      #dat on irc.freenode<br>
+  </div>
 </body>
 </html>
