add first slide images

--- a/knight-publicbits/index.html
+++ b/knight-publicbits/index.html
@@ -143,20 +143,24 @@ window.onload = function() {
     <small>max ogden<br>mathias buus<br>karissa mckelvey </small>
   </div>
   <div>
+    <img src="slides-01.png" />
     <notes>look at sue</notes>
   </div>
-  <div>
+  <div><img src="slides-02.png" />
     <notes>
       sue is a data analyst. she finds data from the internet and makes sense out of it.
     </notes>
   </div>
   <div>
+    <img src="slides-03.png" />
     <notes>.ok, sue wants to do a study on water quality around the world.</notes>
   </div>
   <div>
+    <img src="slides-04.png" />
     <notes>first, she needs to get data about the quality of water. catalogue it. and analyze it.</notes>
   </div>
   <div>
+    <img src="slides-05.png" />
     <notes>
       does searches.
       ckan portals -> “water quality” -> copy link -> download
@@ -165,26 +169,31 @@ window.onload = function() {
     </notes>
   </div>
   <div>
+    <img src="slides-06.png" />
     <notes>
       once the data is all downloaded, we can make awesome charts, graphs, analysis, policy papers, news articles, everything!
     </notes>
   </div>
   <div>
+    <img src="slides-08.png" />
+  </div>
+  <div>
+    <img src="slides-11.png" />
     <notes>
       … but what happens if the data changes? sue will have to repeat the process in order to find out..if she doesn't, bad things could happen (science, journalism)
     </notes>
   </div>
   <div>
+    <img src="slides-09.png" />
+  </div>
+  <div>
+    <img src="slides-10.png" />
     <notes>
       …. what if the data becomes unavailable? no one else can replicate it. (internet archive)
     </notes>
   </div>
   <div>
-    <notes>
-      …. what if the data becomes unavailable? no one else can replicate it. (internet archive)
-    </notes>
-  </div>
-  <div>
+    <img src="slides-12.png" />
     <notes>
       …. how about if the data is really large? it might take forever to download if the server is slow (wikipedia)
     </notes>
@@ -195,6 +204,7 @@ window.onload = function() {
     </notes>
   </div>
   <div>
+    <img src="dat-data.png" />
     <notes>
       we have been working on better data sharing tools for the last few years
     </notes>
@@ -210,6 +220,7 @@ window.onload = function() {
     </notes>
   </div>
   <div>
+    <img src="slides-13.png" />
     <notes>
       it will scrape data sources and make them discoverable and easy to download
     </notes>
